--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,10 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <meta-data android:name="android.notch_support" android:value="true" />
+
+    <meta-data
+        android:name="android.notch_support"
+        android:value="true" />
 
     <application
         android:allowBackup="true"
@@ -26,8 +29,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".viewables.SettingsActivity"
-            android:exported="true"/>
+        <activity
+            android:name=".viewables.SettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".viewables.SettingsDetailActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
