--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
         android:theme="@style/Theme.AmbientGallery"
+        android:hardwareAccelerated="true"
         tools:targetApi="31">
         <activity
             android:name="com.ambientgallery.viewables.MainActivity"
